<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >
    <TextView
        android:id="@+id/text_view_profile_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/profile"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_profile_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/edit_text_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_profile_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/edit_text_profile_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_profile_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_firstname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/edit_text_profile_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_profile_key_retrieval_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_lastname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/edit_text_profile_key_retrieval_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_retrieval_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/text_key_retrieval_password_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_retrieval_password_description"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_key_retrieval_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_profile_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/text_key_retrieval_password_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:id="@+id/profile_progressbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminateDuration="800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:type="folding_circles" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>